--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,197 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@600&display=swap');
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+	/* --black-gradient: linear-gradient(
+		144.39deg,
+		#ffffff -278.56%,
+		#6d6d6d -78.47%,
+		#11101d 91.61%
+	);
+	--card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1); */
+}
+
+* {
+	scroll-behavior: smooth;
+}
+
+.active-nav-link svg path,
+.active-nav-link svg circle {
+	@media screen and (min-width: 320px) {
+		stroke: #004d78;
+	}
+	@media screen and (min-width: 1000px) {
+		stroke: #ffffff;
+	}
+	@media screen and (min-width: 1200px) {
+		stroke: #004d78;
+	}
+}
+.social-contact-link svg path {
+	transition: 0.5s all;
+}
+.social-contact-link:hover svg path {
+	fill: rgba(0, 20, 49, 1);
+	fill-opacity: 1;
+}
+
+.button {
+	transition: 0.5s all;
+}
+
+.button:hover svg .svg_bg {
+	transform: translateY(0%) !important;
+	height: 100%;
+}
+
+/* ScrollableContainer.css */
+*::-webkit-scrollbar {
+	width: 8px;
+	cursor: pointer;
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: #004d78; /* Задайте цвет бегунка */
+	border-radius: 0 4px 4px 0;
+	cursor: pointer;
+}
+
+*::-webkit-scrollbar-track {
+	background: #fff; /* Задайте цвет трека */
+	border-radius: 0 10px 10px 0;
+	cursor: pointer;
+}
+
+textarea::-webkit-scrollbar-thumb {
+	border-radius: 0;
+}
+
+textarea::-webkit-scrollbar-track {
+	border-radius: 0;
+}
+
+.contact-icon path {
+	fill-opacity: 1;
+}
+
+.alert {
+	color: rgb(248 113 113) !important;
+}
+
+.content-wrapper .swiper-button-prev,
+.content-wrapper .swiper-button-next {
+	bottom: 15px;
+	top: auto;
+	width: auto;
+	height: auto;
+	margin: 0;
+}
+
+.content-wrapper .swiper-button-next {
+	right: 136px;
+}
+
+.content-wrapper .swiper-button-prev {
+	left: auto;
+	right: 429px;
+}
+
+.content-wrapper .swiper-button-prev.swiper-button-disabled {
+	bottom: 31px;
+}
+
+.content-wrapper .swiper-button-next.swiper-button-disabled {
+	bottom: 31px;
+	right: 198px;
+}
+
+.content-wrapper .swiper-button-prev::before {
+	content: '';
+	position: absolute;
+	height: 47px;
+	opacity: 1;
+	right: -40px;
+	width: 2px;
+	background: linear-gradient(209.12deg, #5e0495 0%, #de4079 82.27%);
+}
+
+.content-wrapper .swiper-button-prev:after,
+.content-wrapper .swiper-button-next:after {
+	content: '';
+	background-size: 100%;
+	width: 219px;
+	height: 130px;
+}
+
+.content-wrapper
+	.swiper-button-prev.swiper-button-prev.swiper-button-disabled:after,
+.content-wrapper
+	.swiper-button-next.swiper-button-next.swiper-button-disabled:after {
+	width: 155px;
+	height: 94px;
+}
+
+.content-wrapper .swiper-button-prev:after {
+	background-image: url('./assets/prev-ico.svg');
+}
+
+.content-wrapper .swiper-button-next:after {
+	background-image: url('./assets//next-ico.svg');
+}
+
+.content-wrapper .slider-projects {
+	padding-bottom: 175px;
+	overflow-x: clip;
+	overflow-y: visible;
+}
+
+@media screen and (max-width: 999px) {
+	.content-wrapper .swiper-button-prev:after,
+	.content-wrapper .swiper-button-next:after {
+		width: 155px;
+		height: 94px;
+	}
+	.content-wrapper .swiper-button-prev,
+	.content-wrapper .swiper-button-next {
+		bottom: 31px;
+	}
+	.content-wrapper .swiper-button-prev {
+		right: 232px;
+	}
+	.content-wrapper .swiper-button-next,
+	.content-wrapper .swiper-button-next.swiper-button-disabled {
+		right: 0px;
+	}
+	.content-wrapper .slider-projects {
+		padding-bottom: 150px;
+	}
+}
+
+@media screen and (max-width: 559px) {
+	.content-wrapper .swiper-button-prev:after,
+	.content-wrapper .swiper-button-next:after {
+		width: 113px !important;
+		height: 70px !important;
+	}
+	.content-wrapper .swiper-button-prev {
+		right: 150px;
+	}
+	.content-wrapper .swiper-button-prev::before {
+		right: -20px;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	.email-link {
+		max-width: 210px;
+	}
 }
